# mlx-tcn

./: .gitignore  README.md  example.py  pyproject.toml
mlx-tcn/: buffer.py  conv.py  modules.py  pad.py  tcn.py  utils.py
mlx_tcn/: __init__.py  buffer.py  conv.py  pad.py  parametrizations.py  pool.py  se.py  tcn.py
tests/: __init__.py
tests/unit/: __init__.py  test_buffer.py  test_config.py  test_conv.py  test_data.py  test_loop.py  test_model.py  test_pad.py  test_parametrizations.py  test_tcn.py
train/: __init__.py  cli.py  config.py  data.py  loop.py  model.py  pool.py  se.py  visualize.py
